Fix surface builders for extended world height.